--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "child_process": "^1.0.2",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "http-errors": "^1.8.0",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "jquery": "^3.6.0",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "readline": "^1.3.0",
+    "socket.io": "^4.0.1"
   }
 }
