--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "jquery": "^3.6.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "path": "^0.12.7",
     "readline": "^1.3.0",
     "socket.io": "^4.0.1"
