--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser-xml": "^2.0.3",
     "child_process": "^1.0.2",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
