--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "final_project": "file:mongodb",
     "http-errors": "^1.8.0",
     "jade": "~1.11.0",
     "jquery": "^3.6.0",
